...
  "objects": [
   {
    "id": "111c0e55-1bf7-4706-8aeb-c3ecc2063c21",
    "nameSingular": "person",
    "namePlural": "people",
    "labelSingular": "Person",
    "labelPlural": "People",
    "icon": null,
    "isActive": true,
    "isSystem": false,
    "isCustom": false,
    "labelIdentifierFieldMetadataId": "026772d1-1320-4fee-86d0-d316f6432b51",
    "imageIdentifierFieldMetadataId": null,
...
   },
   {
    "id": "8ba24324-2ee2-4408-9a0c-e7961e8b3a84",
    "nameSingular": "company",
    "namePlural": "companies",
    "labelSingular": "Company",
    "labelPlural": "Companies",
    "icon": null,
    "isActive": true,
    "isSystem": false,
    "isCustom": false,
    "labelIdentifierFieldMetadataId": "21a22b06-844b-49b0-9334-1f04a80f6e60",
    "imageIdentifierFieldMetadataId": null,
...
